docs: updating the documentation of the projects
